package ejercicio1.codigo;

public interface CompararYClasificarNumeros {
    double mayorDeDos(double numero1, double numero2);

    int clasificarNumeros(double numero1, double numero2);
}
