package ejercicio1.codigo;

public interface ObtenerNumero {
    double obtenerNumero(String mensaje);
}
