@startuml
class ComparacionYClasificacionNumeros {
    + obtenerNumero(String mensaje): double
    + mayorDeDos(double numero1, double numero2): double
    + clasificarNumeros(double numero1, double numero2): int
}
interface ObtenerNumero {
    obtenerNumero(String mensaje): double
}
interface CompararYClasificarNumeros {
    mayorDeDos(double numero1, double numero2): double
    clasificarNumeros(double numero1, double numero2): int
}
ComparacionYClasificacionNumeros ..|> ObtenerNumero
ComparacionYClasificacionNumeros ..|> CompararYClasificarNumeros
@enduml